--- a/MyCompany/Views/Shared/CssPartial.cshtml
+++ b/MyCompany/Views/Shared/CssPartial.cshtml
@@ -1,2 +1,2 @@
-﻿<link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
+﻿<link rel="stylesheet" href="~/css/main.min.css" asp-append-version="true" />
 <noscript><link rel="stylesheet" href="~/css/noscript.css" asp-append-version="true" /></noscript>
