--- a/MyCompany/Views/Shared/MetatagsPartial.cshtml
+++ b/MyCompany/Views/Shared/MetatagsPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Reflection
+@using MyCompany.Service
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 @if (ViewBag.Title != null)
@@ -7,7 +8,7 @@
 }
 else
 {
-    <title> My Portfolio </title>
+    <title> @Config.CompanyName </title>
 }
 @if (ViewBag.Description != null)
 {
