--- a/MyCompany/wwwroot/css/main.css
+++ b/MyCompany/wwwroot/css/main.css
@@ -54,12 +54,12 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-input, select, textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none; }
-
+/* input, select, textarea {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+	} */
 /* Basic */
 @-ms-viewport {
   width: device-width; }
